# knowledge-reasoning-moreorg

./: .clang-format  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile-22.04  Doxyfile.in  LICENSE  README  README.md  manifest.xml
src/: Agent.cpp  Agent.hpp  AgentInterface.cpp  AgentInterface.hpp  AgentLink.cpp  AgentLink.hpp  Algebra.cpp  Algebra.hpp  Analyser.cpp  Analyser.hpp  AtomicAgent.cpp  AtomicAgent.hpp  Benchmark.cpp  CMakeLists.txt  Class.cpp  Class.hpp  Combinatorics.cpp  Combinatorics.hpp  Dummy.cpp  Dummy.hpp  Exceptions.hpp  Functionality.cpp  Functionality.hpp  FunctionalityMapping.cpp  FunctionalityMapping.hpp  FunctionalityRequirement.cpp  FunctionalityRequirement.hpp  Heuristics.cpp  Heuristics.hpp  InferenceRule.cpp  InferenceRule.hpp  Instance.cpp  Instance.hpp  KnowledgeBase.cpp  KnowledgeBase.hpp  Main.cpp  Metric.cpp  Metric.hpp  ModelPool.cpp  ModelPool.hpp  (+45 more)
src/algebra/: CompositionFunction.cpp  CompositionFunction.hpp  Connectivity.cpp  Connectivity.hpp  ResourceSupportVector.cpp  ResourceSupportVector.hpp
src/archive/: Ontology.hpp
src/ccf/: Actor.cpp  Actor.hpp  CAF.cpp  CAF.hpp  CCF.hpp  CombinedActor.cpp  CombinedActor.hpp  Interface.cpp  Interface.hpp  InterfaceType.cpp  InterfaceType.hpp  Link.cpp  Link.hpp  LinkGroup.cpp  LinkGroup.hpp  LinkType.cpp  LinkType.hpp  Scenario.cpp  Scenario.hpp
src/db/: FileBackend.cpp  FileBackend.hpp  KnowledgeBase.cpp  KnowledgeBase.hpp  Ontology.cpp  Ontology.hpp
src/db/rdf/: SopranoDB.cpp  SopranoDB.hpp  Sparql.cpp  Sparql.hpp  SparqlInterface.cpp  SparqlInterface.hpp  Variable.cpp  Variable.hpp
src/exporter/: PDDLExporter.cpp  PDDLExporter.hpp
src/facades/: Facade.cpp  Facade.hpp  Robot.cpp  Robot.hpp
src/facets/: Facet.hpp  Robot.cpp  Robot.hpp
src/inference_rules/: AtomicAgentRule.cpp  AtomicAgentRule.hpp  CompositeAgentRule.cpp  CompositeAgentRule.hpp
src/io/: LatexWriter.cpp  LatexWriter.hpp
src/metrics/: DistributionFunctions.cpp  DistributionFunctions.hpp  ModelSurvivability.cpp  ModelSurvivability.hpp  Probability.cpp  Probability.hpp  ProbabilityDensityFunction.cpp  ProbabilityDensityFunction.hpp  ProbabilityOfFailure.cpp  ProbabilityOfFailure.hpp  Redundancy.cpp  Redundancy.hpp
src/metrics/pdfs/: ConstantPDF.cpp  ConstantPDF.hpp  ExponentialPDF.cpp  ExponentialPDF.hpp  WeibullPDF.cpp  WeibullPDF.hpp
src/organization_model/: ActorModelLink.cpp  ActorModelLink.hpp  EndpointModel.cpp  EndpointModel.hpp  Grounding.cpp  Grounding.hpp  InterfaceConnection.cpp  InterfaceConnection.hpp  Statistics.cpp  Statistics.hpp
src/owlapi/: Exceptions.hpp  KnowledgeBase.cpp  KnowledgeBase.hpp  OWLApi.hpp  Vocabulary.cpp  Vocabulary.hpp
src/owlapi/csp/: ResourceMatch.cpp  ResourceMatch.hpp  ResourceMatching.hpp
src/owlapi/db/: FileBackend.cpp  FileBackend.hpp
src/owlapi/io/: XMLUtils.cpp  XMLUtils.hpp
src/owlapi/model/: HasAnnotations.hpp  HasIRI.hpp  IRI.cpp  IRI.hpp  NodeID.cpp  NodeID.hpp  OWLAnnotation.hpp  OWLAnnotationObject.hpp  OWLAnnotationProperty.hpp  OWLAnnotationValue.hpp  OWLAnonymousIndividual.hpp  OWLAxiom.cpp  OWLAxiom.hpp  OWLAxiomVisitor.hpp  OWLCardinalityRestriction.cpp  (+77 more)
src/policies/: AgentSizeBasedSelection.cpp  AgentSizeBasedSelection.hpp  AllSelection.cpp  AllSelection.hpp  DistributionPolicy.cpp  DistributionPolicy.hpp  EnergyProviderPolicy.cpp  EnergyProviderPolicy.hpp  FunctionalityBasedSelection.cpp  FunctionalityBasedSelection.hpp  PropertyBasedSelection.cpp  PropertyBasedSelection.hpp  SelectionPolicy.cpp  SelectionPolicy.hpp  TransportProviderPolicy.cpp  TransportProviderPolicy.hpp
src/reasoning/: ModelBound.cpp  ModelBound.hpp  ResourceInstanceMatch.cpp  ResourceInstanceMatch.hpp  ResourceMatch.cpp  ResourceMatch.hpp
src/utils/: CoalitionStructureGeneration.cpp  CoalitionStructureGeneration.hpp  CorrelationClustering.hpp  GecodeUtils.cpp  GecodeUtils.hpp  IntegerPartitioning.cpp  IntegerPartitioning.hpp  LimitedCombination.cpp  LimitedCombination.hpp  OrganizationModelReader.cpp  OrganizationStructureGeneration.cpp  OrganizationStructureGeneration.hpp  ScenarioAnalysis.cpp
src/vocabularies/: OM.hpp  OMBase.hpp  OWL.hpp  RDF.hpp  RDFS.hpp  Robot.hpp  VRP.hpp
test/: CMakeLists.txt  suite.cpp  test_Algebra.cpp  test_Analyser.cpp  test_CCF.cpp  test_CSP.cpp  test_CoalitionStructureGeneration.cpp  test_Combinatorics.cpp  test_CorrelationClustering.cpp  test_Dummy.cpp  test_Exporter.cpp  test_Facades.cpp  test_Facets.cpp  test_Heuristics.cpp  test_InferenceRule.cpp  test_IntegerPartitioning.cpp  test_KnowledgeBase.cpp  test_Lego.cpp  test_Metrics.cpp  test_Model.cpp  test_ModelGeneration.cpp  test_ModelPool.cpp  test_OWLApi.cpp  test_Ontology.cpp  test_OrganizationModel.cpp  test_OrganizationModelAsk.cpp  test_Policy.cpp  test_PropertyConstraintSolver.cpp  test_Resource.cpp  test_Sparql.cpp  test_utils.hpp
test/data/: know-rob-testing.owl  om-base-v0.1.owl  om-base-v0.2.owl  om-base-v0.3.owl  om-base-v0.4.owl  om-configuration.xml  om-extrabots.owl  om-icaps-v0.1.owl  om-lego-v0.1.owl  om-multiple-interfaces.owl  om-project-transterra.owl  om-robot-basecamp-v0.1.owl  om-robot-basecamp.owl  om-robot-coyote-iii-v0.1.owl  om-robot-coyote-iii.owl  om-robot-crex-v0.1.owl  om-robot-crex.owl  om-robot-payload-v0.1.owl  om-robot-payload-v0.2.owl  om-robot-payload.owl  om-robot-sherpa-tt.owl  om-robot-sherpa-v0.1.owl  om-robot-sherpa-v0.2.owl  om-robot-sherpa.owl  om-robotpool.owl  om-schema-latest.owl  om-schema-v0.1.owl  om-schema-v0.12.owl  om-schema-v0.13.owl  om-schema-v0.14.owl  om-schema-v0.15.owl  om-schema-v0.16.owl  om-schema-v0.17.owl  om-schema-v0.18.owl  om-schema-v0.19.owl  om-schema-v0.2.owl  om-schema-v0.20.owl  om-schema-v0.21.owl  om-schema-v0.3.owl  om-schema-v0.4.owl  (+11 more)
test/performance/: cachegrind_annotation-after-first-caching.out  cachegrind_annotation-baseline-no-actor.out  cachegrind_annotation-baseline-one-sherpa-actor.out  cachegrind_annotation-baseline-sherpa-crex-2nd-review.out  cachegrind_annotation-baseline-sherpa-crex.out  cachegrind_annotation.out  callgrind.out.5646  callgrind.out.6038  result.data
(+50 files in other folders)
